body overflow fixed

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -41,6 +41,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.45;
   -webkit-font-feature-settings: "ss01" on;
+  overflow-x: hidden;
 }
 
 /* Utility clean container */
